--- a/WoWDataMigrate/WoWDataMigrate.csproj
+++ b/WoWDataMigrate/WoWDataMigrate.csproj
@@ -49,10 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="ItemJson.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI.cs" />
+    <Compile Include="ZoneJson.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
