--- a/WoWDataMigrate/packages.config
+++ b/WoWDataMigrate/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Protractor" version="0.11.0" targetFramework="net461" />
   <package id="RestSharp" version="106.3.1" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.5.2" targetFramework="net461" />
 </packages>
