--- a/WoWDataMigrate/packages.config
+++ b/WoWDataMigrate/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GitVersion.CommandLine" version="3.6.5" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Protractor" version="0.11.0" targetFramework="net461" />
-  <package id="RestSharp" version="106.3.1" targetFramework="net461" />
-  <package id="Selenium.WebDriver" version="3.5.2" targetFramework="net461" />
+  <package id="Protractor.Net.Standard" version="0.12.0" targetFramework="net461" />
+  <package id="ProtractorTestAdapter" version="1.0.0.13" targetFramework="net461" />
+  <package id="RestSharp" version="106.4.1" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.14.0" targetFramework="net461" />
 </packages>
