--- a/WoWDataMigrate/WoWDataMigrate.csproj
+++ b/WoWDataMigrate/WoWDataMigrate.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\ProtractorTestAdapter.1.0.0.13\lib\net452\Newtonsoft.Json.dll</HintPath>
     </Reference>
